Converting application mains to unit tests, setting parent poms.